syntax = "proto3";

package atomix.primitive.session;

import "atomix/primitive/operation.proto";
import "atomix/primitive/service.proto";

option java_package = "io.atomix.primitive.session.impl";
option java_outer_classname = "PrimitiveSessionProto";
option java_multiple_files = true;

// Session managed service snapshot
message SessionManagedServiceSnapshot {
    repeated ServiceSession sessions = 7;
    bytes snapshot = 8;
}

// Service session
message ServiceSession {
    int64 session_id = 1;
    string member_id = 2;
    int64 timeout = 3;
    int64 timestamp = 4;
    int64 command_sequence = 5;
    int64 event_index = 6;
    int64 last_completed = 7;
    int64 last_applied = 8;
}

message SessionRequest {
    oneof request {
        OpenSessionRequest open_session = 1;
        KeepAliveRequest keep_alive = 2;
        CloseSessionRequest close_session = 3;
        SessionCommandRequest command = 4;
        SessionQueryRequest query = 5;
    }
}

message SessionResponse {
    oneof response {
        OpenSessionResponse open_session = 1;
        KeepAliveResponse keep_alive = 2;
        CloseSessionResponse close_session = 3;
        SessionCommandResponse command = 4;
        SessionQueryResponse query = 5;
    }
}

message OpenSessionRequest {
    string member_id = 1;
    int64 session_id = 2;
    int64 timeout = 3;
}

message OpenSessionResponse {
}

message KeepAliveRequest {
    int64 session_id = 1;
    int64 command_sequence = 2;
    int64 event_index = 3;
}

message KeepAliveResponse {
}

message CloseSessionRequest {
    int64 session_id = 1;
}

message CloseSessionResponse {

}

message SessionCommandRequest {
    SessionCommandContext context = 1;
    string name = 2;
    bytes input = 3;
}

message SessionCommandResponse {
    SessionContext session = 1;
    bytes output = 2;
}

message SessionQueryRequest {
    SessionQueryContext context = 1;
    string name = 2;
    bytes input = 3;
}

message SessionQueryResponse {
    SessionContext session = 1;
    bytes output = 2;
}

message SessionCommandContext {
    uint64 session_id = 1;
    uint64 sequence_number = 2;
}

message SessionQueryContext {
    uint64 session_id = 1;
    uint64 last_sequence_number = 2;
    uint64 last_index = 3;
}

message SessionEventContext {
    uint64 session_id = 1;
}

message SessionContext {
    uint64 index = 1;
    uint64 event_index = 2;
    uint64 sequence = 3;
}

message EventRequest {
    int64 session_id = 1;
    int64 event_index = 2;
    int64 previous_index = 3;
    repeated PrimitiveEvent events = 4;
}

message EventContext {
    uint64 session_id = 1;
    uint64 index = 2;
    uint64 previous_index = 3;
    uint64 event_count = 4;
    uint64 event_index = 5;
    PrimitiveEvent event = 6;
}

message PrimitiveEvent {
    string type = 1;
    bytes value = 2;
}

message ResetRequest {
    int64 session_id = 1;
    int64 event_index = 2;
}